# InsightSpike-AI

./: .coverage.MacBookPro.58757.XwUfudxx  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  =0.41.0  AGENTS.md  CHANGELOG.md  CITATION.cff  CI_FIXES_SUMMARY.md  CI_POETRY_SETUP_ORGANIZATION_SUCCESS_REPORT.md  CI_TEST_UPDATE_PLAN.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CODE_ENHANCEMENT_PROPOSAL.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  CONCEPTS.md  CONFLICT_REMOVAL_SUMMARY.md  CONTRIBUTING.md  C_VALUE_REMOVAL_IMPLEMENTATION.md  DUPLICATE_FILES_UNIFICATION_PLAN.md  Dockerfile  ENHANCED_EPISODE_MANAGEMENT_IMPL.md  ENVIRONMENT_SETUP.md  EXPERIMENTS.md  EXPERIMENT_ENHANCEMENT_ROADMAP.md  EXPERIMENT_EXECUTION_SUMMARY.md  GPT_O3_REVIEW_RESPONSE_SUMMARY.md  InsightSpike_Colab_Demo.ipynb  InsightSpike_Colab_Demo_Legacy.ipynb  InsightSpike_Colab_Demo_Simplified.ipynb  InsightSpike_Docker_Colab_Setup.ipynb  LICENSE  LICENSE_UPDATE_LOG.md  Makefile  NOTEBOOK_CLEANUP_PLAN.md  NOTICE  (+62 more)
.github/: PULL_REQUEST_TEMPLATE.md  ci.yml
archive_legacy_compatibility/: layer1_error_monitor.py  layer2_memory_manager.py  layer3_graph_pyg.py  layer3_reasoner_gnn.py  layer4_llm.py
archive_old_experiments/: bias_comparison_results.json  comprehensive_rag_analysis.json  demo_results.json  demo_true_insight.py  experiment_results.json  test_complete_integration.py  test_direct_insight.py  test_enhanced_layer1.py  test_enhanced_system.py  test_insight_integration.py  test_layer1_integration.py  test_unbiased_insights.py  visualize_graph_changes.py
benchmarks/: performance_suite.py
config_examples/: README.md  anthropic_config.yaml  config_datastore.yaml  config_experiment_optimized.yaml  config_message_passing.yaml  config_normalized.yaml  (+2 more)
experiments/rag-dynamic-db-v3/: .gitignore  EXPERIMENT_RESULTS_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPROVED_EXPERIMENT_ANALYSIS.md  PAPER_RESULTS.md  PAPER_STRATEGY.md  PROBLEM_ANALYSIS.md  README.md  pyproject.toml  test_basic_functionality.py
experiments/rag-dynamic-db-v3/analysis/: README_ANALYSIS.md  export_baseline_summary.py  export_human_acceptance.py  export_latency.py  export_psz_points.py
experiments/rag-dynamic-db-v3/compare/: README.md  bench_compare.py  utils_embed_gen.py
experiments/rag-dynamic-db-v3/docs/: IMPLEMENTATION_ROADMAP.md  SPECIFICATION.md
experiments/rag-dynamic-db-v3/insight_alignment/: README.md  __init__.py  prepare_alignment_inputs.py  run_alignment_pipeline.py
experiments/rag-dynamic-db-v3/insight_alignment/inputs/: test_alignment.json
experiments/rag-dynamic-db-v3/insight_eval/: .gitignore  README.md  export_insight_alignment_csvs.py  run_alignment.py  run_alignment_ragv3.py  run_psz_trial.py
experiments/rag-dynamic-db-v3/results/decision_analysis/: decisions_20250909_201108.csv  summary_20250909_201108.json
experiments/rag-dynamic-db-v3/results/final_gedig/: final_results_20250909_193745.csv  final_summary_20250909_193745.json
experiments/rag-dynamic-db-v3/results/ged_shortcut/: ged_detailed_20250910_003725.csv  ged_detailed_20250910_003725.json
experiments/rag-dynamic-db-v3/results/improved_gedig/: best_config_queries_20250909_193408.json  improved_results_20250909_193408.json  improved_summary_20250909_193408.csv
experiments/rag-dynamic-db-v3/results/knowledge_base/: initial_knowledge_base_20250909_201553.csv  knowledge_base_report_20250909_201553.txt  knowledge_relationships_20250909_201553.csv
experiments/rag-dynamic-db-v3/results/multidomain_multihop/: detailed_logs_20250910_001819.json  multidomain_results_20250910_001819.json
experiments/rag-dynamic-db-v3/results/multihop_quality/: multihop_results_20250909_233345.json
experiments/rag-dynamic-db-v3/results/optimal_gedig/: optimal_results_20250909_195219.csv  optimal_summary_20250909_195219.json
experiments/rag-dynamic-db-v3/results/parameter_quality/: best_config_decisions_20250909_204935.csv  quality_results_20250909_203115.json  quality_results_20250909_203255.json  quality_results_20250909_204229.json  quality_results_20250909_204612.json  quality_results_20250909_204935.json  query_categories_20250909_203546.csv
experiments/rag-dynamic-db-v3/results/parameter_sweep/: sweep_results_20250909_191948.json  sweep_summary_20250909_191948.csv
experiments/rag-dynamic-db-v3/results/qualitative_analysis/: qualitative_analysis_20250909_202128.csv  qualitative_summary_20250909_202128.json
experiments/rag-dynamic-db-v3/results/rag_prompt_impact/: prompt_impact_results_20250910_005531.json
experiments/rag-dynamic-db-v3/results/scaled_experiments/: scaled_results_20250910_015407.json
experiments/rag-dynamic-db-v3/results/success_gedig/: success_results_20250909_194610.json
experiments/rag-dynamic-db-v3/results/threshold_sensitivity/: threshold_results_20250910_002651.csv  threshold_results_20250910_002651.json
experiments/rag-dynamic-db-v3/results/visualizations/: experiment_results_20250909_184447.json  improved_results_20250909_190839.json  improved_results_20250909_191017.json
experiments/rag-dynamic-db-v3/scripts/: setup_environment.sh
experiments/rag-dynamic-db-v3/src/: analyze_decisions.py  analyze_ged_shortcut_effect.py  analyze_multidomain_multihop.py  analyze_parameter_quality.py  analyze_parameter_quality_multihop.py  analyze_quality.py  analyze_rag_prompt_impact.py  analyze_similarity.py  analyze_threshold_sensitivity.py  calibrate_k_tau.py  debug_gedig.py  export_knowledge_base.py  multidomain_knowledge_base.py  plot_paper_figs.py  run_calibrated_gedig.py  run_experiment.py  run_experiment_improved.py  run_final_gedig.py  run_improved_gedig.py  run_optimal_gedig.py  run_parameter_sweep.py  run_scaled_experiments.py  run_success_gedig.py  scaled_multidomain_knowledge.py  test_functionality.py  test_gedig_calculation.py  test_minimal.py  test_rag_systems.py
experiments/rag-dynamic-db-v3/src/baselines/: __init__.py  base_rag.py  cosine_rag.py  frequency_rag.py  gedig_rag.py  static_rag.py
experiments/rag-dynamic-db-v3/src/core/: __init__.py  config.py  gedig_evaluator.py  knowledge_graph.py
(+3793 files in other folders)
