[tool.poetry]
name = "insightspike-ai"
version = "0.7.0"
description = "InsightSpike prototype with PyG-based GNN layers"
authors = ["YOUR NAME <you@example.com>"]
packages = [{ include = "insightspike", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

# Core ML dependencies - CPU-only for compatibility
torch = ">=2.0.0,<3.0.0"
torchvision = ">=0.15.0"
torchaudio = ">=2.0.0"
faiss-cpu = ">=1.11.0"

# Cross-platform dependencies
numpy = ">=1.24.0,<2.0.0"  # Unified NumPy 1.x for FAISS compatibility
sentence-transformers = "^2.5"
scipy = "^1.12"
transformers = "<4.40"
accelerate = "^0.29"
networkx = "^3.3"
typer = ">=0.7,<0.10"
click = ">=8.0,<8.2"
rich = "^13.6"
datasets = "^2.5"
scikit-learn = "^1.4"
matplotlib = "^3.8"
nltk = "^3.8"
pyyaml = "^6.0"
spacy = ">=3.7.0,<3.8.0"  # Compatible with thinc 8.2.x
thinc = ">=8.2.0,<8.3.0"  # NumPy 1.x compatible version
toml = "^0.10.2"

# Platform-specific dependency management tools
psutil = "^5.9"  # System information
packaging = "^23.0"  # Version parsing
distlib = "^0.3"  # Distribution utilities

# Optional dependencies for enhanced functionality
torch-geometric = { version = "==2.4.0", optional = true }  # Graph neural networks
jupyter = { version = "^1.0", optional = true }
pandas = { version = "^2.0", optional = true }
seaborn = { version = "^0.12", optional = true }
plotly = { version = "^5.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.0"
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"
# faiss is now managed in main dependencies with platform markers

[tool.poetry.group.local.dependencies]
# ローカル開発環境用 - setup.shで個別インストール
# torch, numpy, faiss, torch-geometricは環境依存のためsetup.shで処理

[tool.poetry.group.ci.dependencies]
pytest = "^8.0"
# CIでは faiss は手動インストール（LITE_MODE使用）

[tool.poetry.group.colab.dependencies]
# Colab環境では、以下はsetup_colab.shで先行インストール:
# - torch>=2.4.0 (with CUDA 12.1)
# - numpy==1.26.4 (FAISS + thinc compatible)
# - faiss-gpu-cu12==1.11.0
# - torch-geometric (optional)
ipywidgets = "^8.0"  # Jupyter widget support for Colab
jupyter = "^1.0"     # Jupyter notebook support
notebook = "^7.0"    # Notebook interface

[tool.poetry.group.docker.dependencies]
# Docker環境専用依存関係 - torch/faissは事前にpip installするため除外
jupyter = "^1.0"
notebook = "^7.0"
ipywidgets = "^8.0"

[tool.poetry.group.docker-minimal.dependencies]
# 軽量Docker CI用 - 重いML依存関係を除外
pytest = "^8.0"
typer = ">=0.7,<0.10"
click = ">=8.0,<8.2"
rich = "^13.6"
pyyaml = "^6.0"

[tool.poetry.group.ml-preset.dependencies]
# ML research preset - includes additional ML libraries
jupyter = "^1.0"
notebook = "^7.0"
ipywidgets = "^8.0"
pandas = "^2.0"
seaborn = "^0.12"
plotly = "^5.0"
optuna = "^3.0"
wandb = "^0.16"
torch-geometric = "==2.4.0"

[tool.poetry.group.gpu-preset.dependencies]
# GPU-optimized preset - CUDA-enabled versions (optional - for production GPU environments)
faiss-gpu = { version = ">=1.7.0", markers = "platform_machine == 'x86_64' and sys_platform == 'linux'", optional = true }

[tool.poetry.group.cpu-preset.dependencies]
# CPU-only preset for development/testing
torch = ">=2.2.0"
faiss-cpu = ">=1.7.0"
torch-geometric = "==2.4.0"

[tool.poetry.extras]
# Manual override options for specific environments  
cpu-only = ["torch", "torchvision", "torchaudio", "faiss-cpu", "torch-geometric"]
gpu-latest = ["torch", "torchvision", "torchaudio", "faiss-gpu", "torch-geometric"]
ml-full = ["torch", "torchvision", "torchaudio", "faiss-cpu", "jupyter", "pandas", "seaborn", "plotly", "torch-geometric"]
basic = ["torch", "torchvision", "torchaudio", "numpy", "scipy"]
platform-tools = ["psutil", "packaging", "distlib"]

[tool.poetry.scripts]
insightspike = "insightspike.cli:app"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["insightspike"]
src_paths = ["src", "tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"