[tool.poetry]
name = "insightspike-ai"
version = "0.8.0"
description = "Brain-Inspired Multi-Agent Architecture for Insight Detection and Knowledge Restructuring"
authors = ["Kazuyoshi Miyauchi <contact@insightspike-ai.org>"]
packages = [{ include = "insightspike", from = "src" }]
readme = "README.md"
homepage = "https://github.com/miyauchikazuyoshi/InsightSpike-AI"
repository = "https://github.com/miyauchikazuyoshi/InsightSpike-AI"
keywords = ["artificial-intelligence", "insight-detection", "knowledge-graphs", "reinforcement-learning", "neuroscience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"

# Core ML dependencies - optimized for Colab and local compatibility
# CUDA auto-detection: PyTorch will automatically use GPU when available
torch = "2.2.2"  # PyTorch 2.2.2 uses GCC OpenMP wheel -> Faissと互換
torchvision = "0.17.2"
torchaudio = "2.2.2"
torch-geometric = "^2.4.0"  # Requires torch >=2.2,<2.5
numpy = "<2.0,>=1.26.0"
sentence-transformers = "^2.2.0"  # Auto GPU optimization
scipy = "^1.10.0"
transformers = "^4.30.0"
networkx = "^3.1"
typer = "^0.9.0"
click = "<8.2.0"
rich = "^13.0.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.0"
pyyaml = "^6.0.1"
packaging = "^23.0"

# Vector search - CPU version (GPU version can be added optionally)
faiss-cpu = { version = "^1.7.4", optional = true }
jupyter = { version = "^1.0", optional = true }
pandas = { version = "^2.0", optional = true }
seaborn = "^0.12.0"

imageio = "^2.34.0"
toml = "^0.10.2"
psutil = "^5.9.0"
notebook = "^7.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[tool.poetry.group.ci.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[tool.poetry.extras]
cpu = ["faiss-cpu", "torch-geometric"]
gpu = ["torch-geometric"]
full = ["faiss-cpu", "torch-geometric", "jupyter", "pandas", "seaborn"]

[tool.poetry.scripts]
insightspike = "insightspike.cli.main:main"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["insightspike"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
